a2024-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: a2024
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a2024-deployment
  namespace: a2024
  labels:
    app: a2024
spec:
  replicas: 1
  selector:
    matchLabels:
      app: a2024
  template:
    metadata:
      labels:
        app: a2024
    spec:
      containers:
        - name: a2024
          image: elixirtech/elixir-ambience
          ports:
            - containerPort: 1740
---
apiVersion: v1
kind: Service
metadata:
  name: a2024-service
  namespace: a2024
spec:
  selector:
    app: a2024
  ports:
    - protocol: TCP
      port: 1741
      targetPort: 1740
