mongo-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-deployment
  labels:
    app: mongodb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: 'mongo:latest'
          name: elixir-mongo
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: elixirmongodbdata          
      restartPolicy: Always
      volumes:
        - name: elixirmongodbdata
          persistentVolumeClaim:
            claimName: elixirmongodbdata
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
