a2024-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: a2024-ingress
#  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: a2024-service
            port: 
              number: 80
